[project]
name = "mindscape"
version = "0.1.0"
description = "Honest, efficient non-invasive neural decoding (EEG/MEG) — decode, evaluate under shift, deploy on the edge."
readme = "README.md"
requires-python = ">=3.11"
# LOCAL MOD (not slotted, kept across copier update): the ML dep tree. The template skeleton ships only
# numpy+pydantic; mindscape's runtime deps live here as a permanent local divergence (bd 588n step 5).
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",          # CSP+LDA baseline, metrics (kappa), splits
    "polars",                # the data store + splits (core/data/{store,splits}.py)
    "pydantic>=2",           # validated preprocessing / hparam configs
    "omegaconf",             # paths.yaml loader (core/config.py)
    "mne>=1.6",              # EEG/MEG IO, filtering, epoching
    "moabb>=1.0",            # standardized BCI datasets + paradigms (the verified harness backbone)
    # torch >=2.7 for NVIDIA Blackwell (sm_120, RTX 5090). CPU build is fine for BCI IV-2a (tiny);
    # CUDA build comes from the PyTorch index below, not plain PyPI.
    "torch>=2.7",
    "braindecode>=0.8",      # PyTorch EEG decoders (EEGNet, ShallowFBCSPNet, Deep4Net)
    "pyriemann>=0.5",        # Riemannian baseline — covariance manifold, tangent space + MDM (baselines/riemann.py)
    "optuna>=4.9.0",
    "onnxruntime>=1.27.0",
    "onnxscript>=0.7.1",
    "mlflow>=3.14.0",        # experiment tracking (neuroscan/tracking.py); MINDSCAPE_NO_MLFLOW = off-switch
    "open-clip-torch",       # CLIP image embeddings — the EEG->image retrieval target (Stage-3 NICE baseline)
    "pillow>=12.3.0",        # image IO for the CLIP target computation (clip_targets.py); >=12.3.0 clears 8 PYSEC-2026 CVEs (bd 8gqg)
    "jaxtyping",   # Float[Tensor,"B C H W"] shape/dtype annotations — inert at runtime without a checker (no prod cost)
    "beartype",    # the runtime checker jaxtyping delegates to for live @shapecheck boundaries (see AGENTS.md)
    "joblib",      # fold-parallel in the eval harness (neuroscan/evaluation/harness.py) — used directly, not just via sklearn
    "matplotlib",  # the fusion viewer figures (neuroviz/fusion/viz.py) — used directly, not just via mne
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "fvcore"]   # fvcore: params + FLOPs profiling (neuroscan/models/profile.py)
export = ["onnx", "onnxruntime", "onnxscript"]   # ONNX export + parity check (Stage 2; core/export_onnx.py)
data = ["osfclient", "openneuro-py"]   # dataset fetch (Stage-3 EEG->image: OSF / OpenNeuro); not a runtime dep
# The guardrail ANALYZERS are an installed package pinned by scaffold tag (not vendored source) — an engine
# update is a one-line `devtools_ref` bump on `copier update`, no source diff in your PRs. Imports as
# `devtools` (`python -m devtools.graph …`); grimp/networkx arrive transitively. ast-grep/jscpd configs are
# located from the install via `python -m devtools.config`. Pin lives in .copier-answers.yml (devtools_ref).
devtools = ["sdlc-devtools @ git+https://github.com/dimiturtrz/sdlc-scaffold.git@v1.14.0#subdirectory=sdlc-devtools"]
source = ["nibabel"]   # EEG->cortex source localization: MNE fsaverage forward/inverse (bd 728; core.features.eeg.source)
all = ["pytest", "onnx", "onnxruntime"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*", "neuroscan*"]

# Resolver constraints (bd 8gqg). torch/torchvision/cuda-toolkit are pinned to the current working versions
# so an unrelated `uv lock` (e.g. the pillow CVE bump) does NOT silently drift the ML stack off the moving
# cu130 index — a real torch upgrade is a deliberate change gated on `nox test` + a matched re-measure, bumped
# here on purpose, not as a side effect. NOTE: the setuptools 81.0.0 CVE (PYSEC-2026-3447, fixed in 83.0.0)
# is BLOCKED here — torch==2.12.1+cu130 requires setuptools<82, so setuptools>=83 is unsatisfiable until the
# torch upgrade. Deferred to that task (bd 8gqg follow-up); setuptools is build-time, not a runtime surface.
[tool.uv]
constraint-dependencies = [
    "torch==2.12.1+cu130",
    "torchvision==0.27.1",
    "cuda-toolkit==13.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--import-mode=importlib"

# Dependency hygiene (deptry, ENFORCED): imported-but-undeclared (DEP001) / declared-but-unused (DEP002) /
# transitive (DEP003) imports. noxfile.py imports the `nox` runner (invoked via uvx, deliberately not a
# project dep) so it's excluded from the scan.
[tool.deptry]
extend_exclude = ["noxfile.py"]

# deptry does not scan tests/ (its default exclude), so DEP002 (declared-but-unused) fires for anything
# only exercised by the test suite or by tooling. PERMANENT ignores (never imported in scanned source by
# design): the test-runner deps `pytest`/`pytest-cov`, and `sdlc-devtools` (the analyzers, invoked as a CLI
# `python -m devtools.*`). STARTERS: the runtime deps the scaffold ships for you to build on
# (numpy/jaxtyping/beartype/pydantic) — they read as unused until you import them.
[tool.deptry.per_rule_ignores]
# >>> LOCAL-SLOT: deptry-unused — PRUNE a starter once you wire it (keep pytest/pytest-cov/sdlc-devtools)
# DEP002 (declared-but-unused): test/tooling deps deptry can't see (pytest/pytest-cov/sdlc-devtools), the
# scaffold starters (numpy/jaxtyping/beartype/pydantic), and the OPTIONAL-EXTRA deps whose only consumers are
# coverage-omitted shells or lazy imports deptry doesn't scan — onnx/onnxscript (export/ ONNX path,
# core/export_onnx.py), osfclient/openneuro-py (data/ dataset fetch), nibabel (source/ fsaverage forward).
DEP002 = ["pytest", "pytest-cov", "sdlc-devtools", "numpy", "jaxtyping", "beartype", "pydantic",
          "onnx", "onnxscript", "osfclient", "openneuro-py", "nibabel"]
# DEP001 (imported-but-undeclared): the external git-repo checkouts under external/ (gitignored, checked out
# not vendored — CLAUDE.md), never pip deps: EEGPT (`EEGPT_mcae`/`models`, foundation.py) + `benchnirs`.
DEP001 = ["EEGPT_mcae", "models", "benchnirs"]
# <<< LOCAL-SLOT: deptry-unused

[tool.ruff]
line-length = 120
# >>> LOCAL-SLOT: ruff-exclude — edit freely, the template will not overwrite intent here
extend-exclude = ["mlruns", "runs", "*.egg-info", "docs", "learning", "research", "interpretations", "neuroviz/web"]
# <<< LOCAL-SLOT: ruff-exclude

[tool.ruff.lint]
select = ["F", "B", "I", "T201", "FBT", "BLE001", "S101", "S110", "C901", "PLR0912", "PLR0913", "PLR0915", "PLR2004", "PLC0415", "RUF100", "N", "E741", "E742", "E743", "PLR0124", "PLR1714", "PLW3301", "RUF012", "RUF005", "RUF007", "RUF010", "RUF022", "RUF046", "C408", "C420", "SIM", "PERF401", "PLW0108", "E731", "E402", "ICN001", "S603", "S607", "PTH123", "E501", "SLF001"]
ignore = [
    # jaxtyping shape strings are deliberate runtime-checked annotations that ruff's forward-ref parser
    # misreads (jaxtyping's own FAQ prescribes disabling both): F722 = a multi-token dim string
    # `Float[Tensor, "b c h w"]` (invalid forward-ref syntax); F821 = a single-axis `Float[Tensor, "n"]`
    # (a valid forward-ref to the undefined name `n`). Needed so a 1-D shape passes the now-blocking
    # shape-contracts gate (bd kqk) — the shape gate REQUIRES an annotation the lint would otherwise reject.
    "F722",
    "F821",
]

# pep8-naming (N): case convention is a UNIVERSAL rule; the allowlisted idioms are per-repo FACTS. Every
# name that carries a meaning renames — only symbols with no honest descriptive form belong here (a dodge
# makes the gate useless).
[tool.ruff.lint.pep8-naming]
# >>> LOCAL-SLOT: pep8-naming — ignore-names VOCAB (this repo's ML/physics idioms); the block is shared,
# only its contents differ. Add domain symbols (MRI T1/T2/TR/PD, canonical lib aliases…) here.
# Single-uppercase = canonical linear-algebra matrices (A/B/C covariance, D diag, G gain, L lower-tri,
# M/P projection, R rotation, T transform/temperature, W weights); `F*`/`C*`/`P*`/`R*`/`W*` glob the
# feature-matrix + weight families (Ff/Fe/Ftr fnirs-eeg feature blocks, Cs/CF/CE covariances, Wq/W_f/W_e
# weight maps, P_all/Rz derived). Design matrix / weight idioms with no honest lowercase form.
ignore-names = ["X*", "Y*", "A", "B", "C*", "D", "F*", "G", "H", "L", "M", "P*", "R*", "T", "W*"]
# <<< LOCAL-SLOT: pep8-naming

[tool.ruff.lint.per-file-ignores]
# Tests get a wider carve-out: literal fixtures (PLR2004) + bool flags (FBT); mock classes mirror external
# PascalCase APIs + local math/alias scratch (N8xx); fixtures take many params (PLR0913). The SUBSTANTIVE
# gates (imports-at-top, real bugs, dead code) still apply to tests. SLF001 is enforced house-wide again
# (bd 8ex reopened) but tests legitimately poke privates-under-test, so it sits in the tests carve-out.
"__init__.py" = ["F401"]
"tests/**" = ["S101", "PLR2004", "FBT", "SLF001", "N801", "N802", "N803", "N806", "N812", "PLR0913"]
# >>> LOCAL-SLOT: per-file-ignores — repo-specific file carve-outs (e.g. a best-effort telemetry shell
# that must never raise). Add lines here; copier update won't overwrite this region.
# NO SLF001 carve: scaffold v1.12 re-enforced SLF001 house-wide, and the op-namespace tree was migrated to
# honour it (bd b8i) — @staticmethod op-namespaces are now @classmethod so same-class sibling calls read `cls._x`
# (allowlisted, not a reach-in); module `main()`s moved into their class as `@classmethod main(cls)`; genuinely
# shared helpers a sibling module needed were promoted to public API (the real reach-ins SLF001 flagged). The
# only residual is the documented moabb `_sanitize_path` monkeypatch, `# noqa: SLF001` at its three sites.
# <<< LOCAL-SLOT: per-file-ignores

[tool.vulture]
min_confidence = 60
ignore_decorators = ["@model_validator", "@field_validator", "@field_serializer", "@model_serializer", "@computed_field"]
# ignore_names = symbols vulture must treat as USED — each IS referenced, but through a path its static
# name-match can't follow (framework dispatch, iteration, string keys, external-lib attribute). NOT a
# "don't care" list — a FACT VOCAB, per-repo, parallel to the pep8-naming slot (bd fy5). `model_config`
# is the universal pydantic base (metaclass-read); add this repo's documented FPs below.
# >>> LOCAL-SLOT: vulture-ignore-names — this repo's documented dead-code false positives.
# Framework-implicit: torch nn.Module.forward (via __call__), ORT SessionOptions.intra_op_num_threads,
# CBraMod.proj_out (Identity-set to expose backbone features). Referenced, not dead.
# JointForward: the source-space fusion generator (bd shd) — exercised by tests/ (which vulture doesn't scan)
# and pending the decode-integration wiring; the SLF001 op-namespace migration removed the internal
# self-refs that had masked it. Test-referenced, not dead.
ignore_names = ["model_config", "forward", "intra_op_num_threads", "proj_out", "allow_tf32", "JointForward"]
# <<< LOCAL-SLOT: vulture-ignore-names
# >>> LOCAL-SLOT: vulture-scan — edit freely, the template will not overwrite intent here
paths = ["core", "neuroscan", "baselines"]
exclude = ["neuroviz", "runs", "mlruns"]
# <<< LOCAL-SLOT: vulture-scan

[tool.coverage.run]
# >>> LOCAL-SLOT: coverage-scan — edit freely, the template will not overwrite intent here
source = ["core", "neuroscan", "baselines"]
omit = [
    # top-level CLI entrypoints (argparse + dispatch)
    "neuroscan/tasks/run.py", "neuroscan/tasks/reproduce_all.py",
    "neuroscan/tasks/motor_imagery/reproduce_atcnet.py",
    "neuroscan/tasks/motor_imagery/align.py",   # MI transfer RUNNER (its logic is baselines/eeg/transfer.py, 100% tested)
    # dependency glue: onnx quantize / CLIP download / mlflow tracking / ONNX export
    "neuroscan/tasks/motor_imagery/quantize.py", "neuroscan/tasks/visual/clip_targets.py",
    "neuroscan/tracking.py",
    "core/export_onnx.py",   # ONNX export (onnx dep; trained-decoder glue)
    # interface / registry maps (no logic)
    "core/decoder.py",   # typing.Protocol decoder contract (structural interface, no body)
    "core/data/registry.py",   # top-level dataset registry map (sibling core/data/*/registry.py already omitted)
    # GPU training entrypoints + torch models/trainers (device + data, not logic)
    "neuroscan/tasks/visual/train_nice.py", "neuroscan/tasks/visual/retrieval_audit.py",
    "neuroscan/tasks/visual/cross_dataset_eval.py",   # cross-dataset EEG1->EEG2 GPU runner
    "neuroscan/tasks/visual/loso_eval.py",   # leave-one-subject-out GPU runner (loops train_nice.train)
    "neuroscan/tasks/visual/frozen_head.py",   # frozen-backbone head sweep (external backbone + device, bd nm5)
    "neuroscan/models/decoders.py", "neuroscan/models/eegnet.py",
    "neuroscan/models/foundation.py",   # CBraMod wrapper: external backbone + device + out-of-repo weights (contract-test skip-guarded)
    "neuroscan/models/profile.py",   # fvcore params+FLOPs (model on device)
    "neuroscan/tasks/workload/feature_importance/optuna_search.py",   # Optuna study runner (entrypoint)
    "neuroscan/tasks/workload/feature_importance/differentiable.py",  # torch/GPU differentiable feature-selection runner
    "baselines/fusion/gate.py", "baselines/fusion/spatiotemporal.py", "core/data/eeg/braindecode_pre.py",
    # data adapters: filesystem read / OSF+OpenNeuro download
    "core/data/*/registry.py", "core/data/eeg/things_eeg2.py", "core/data/fnirs/shin2017.py",
    "core/data/eeg/things_eeg1.py",   # BrainVision disk read (its pure epochs_from_events is unit-tested)
    "core/features/fnirs/montage.py",   # fnirs_positions loads .mat (disk); pure _to_unit_disk tested in features/eeg/montage
    # workload/fusion runners: load -> fit -> record orchestration (their logic lives in combine/base/_eval,
    # and the per-subject z-score in core.features.zscore_per_subject)
    "neuroscan/tasks/workload/run_fnirs.py", "neuroscan/tasks/workload/run_fusion.py",
    "neuroscan/tasks/workload/fusion_gate.py", "neuroscan/tasks/workload/calibration_ablation.py",
    "neuroscan/tasks/workload/fusion_camera_eval.py",
    "neuroscan/tasks/workload/fusion_riemann_eval.py", "neuroscan/tasks/workload/fnirs_windowed_eval.py",
    "neuroscan/tasks/workload/fnirs_glm_eval.py", "neuroscan/tasks/workload/fnirs_clean_ablation.py",
    "neuroscan/tasks/workload/coupling_probe.py", "neuroscan/tasks/workload/workload_confusion.py",
    "neuroscan/tasks/workload/repro_benchnirs.py",
    "neuroscan/tasks/workload/feature_importance/recipes.py",   # fixed-recipe CV RUNNER (pure _cv logic tested; rest is store.load/disk record)
    # one-off decode/probe RUNNERS (load -> decode-arms -> log; the shared decode logic is in workload/riemann.py, tested)
    "neuroscan/tasks/workload/augment_probe.py", "neuroscan/tasks/workload/source_decode.py",
    "neuroscan/tasks/workload/source_prior_decode.py", "neuroscan/tasks/workload/validate_coupling.py",
    "neuroscan/tasks/cli.py",   # runner glue: logging.basicConfig + quiet-libs (side-effect setup, like tracking.py)
    "core/data/eeg/bnci2014_001.py",   # MOABB BNCI2014_001 adapter (download/disk, like the things_eeg*/shin2017 adapters)
]
# <<< LOCAL-SLOT: coverage-scan

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "^\\s*\\.\\.\\.$",
    "@(abc\\.)?abstractmethod",
]


# Directional layer gate (import-linter): forbidden-import CONTRACTS graph.py can't express — a one-way
# `core -> trainer` import is no cycle, so it passes the graph gate but must fail here. The gate is
# universal (all house repos run it); the SCOPE + contracts are project-local, hence the slot.
# >>> LOCAL-SLOT: import-contracts — layering scope + your directional rules. `root_packages` is the set
# import-linter analyses (defaults to `packages`; widen it if a scope-only package such as a viewer carries
# layer rules but isn't in the arch set). mindscape widens to include neuroviz (the viewer): it reuses
# neuroscan's model registry (an intended downward edge), so it isn't in the arch gate set but DOES carry
# the "never import the viewer upward" rules. Three tiers, imports point DOWN only: core < neuroscan < neuroviz.
[tool.importlinter]
root_packages = ["core", "neuroscan", "neuroviz"]

[[tool.importlinter.contracts]]
name = "core is an independent kernel (imports neither neuroscan nor neuroviz)"
type = "forbidden"
source_modules = ["core"]
forbidden_modules = ["neuroscan", "neuroviz"]

[[tool.importlinter.contracts]]
name = "neuroscan (trainer) never imports neuroviz (viewer)"
type = "forbidden"
source_modules = ["neuroscan"]
forbidden_modules = ["neuroviz"]
# <<< LOCAL-SLOT: import-contracts


# Architecture fitness thresholds read by devtools/graph.py --assert.
[tool.structure]
# >>> LOCAL-SLOT: arch-thresholds — tune per repo; the template ships defaults and won't churn these,
# so a per-project override survives `copier update` without a merge conflict.
bottleneck_degree = 8    # fan-in AND fan-out both over this = god-module
file_max = 750           # god-file line ceiling — raise as real files grow
file_min = 0             # advisory line floor — 0 = OFF (no honest universal floor; raise per repo if wanted)
betweenness_max = 0.10   # advisory chokepoint threshold
main_sequence_max = 0.0  # advisory Martin main-sequence distance |A+I-1| ceiling — 0 = OFF (a concrete
                         # stable leaf legitimately sits at D≈1, so no honest universal floor; raise per repo)
test_layout = "mirror"   # every logic module needs a unit test: "mirror" = tests/unit/<pkg>/<path>/test_<name>.py
                         # (strict, one home); "flat" = test_<name>.py anywhere under tests/; "off" = no check
# <<< LOCAL-SLOT: arch-thresholds

# magic-literals + complexity are ADVISORY explorers (devtools/magic_literals.py, devtools/complexity.py) —
# ranked reports, no gate, no config. The FIXED complexity gate is ruff C901 (CC>10). There is no honest
# universal magic-literal ceiling (0 too strict, N arbitrary), so it stays a report. If a repo later needs
# to enforce a budget, add a legislated config knob at that point — a knob is added on real need, not now.

# Shape-contract gate (devtools/shape_contracts.py) — a public array/tensor boundary must carry a
# jaxtyping shape, not a bare `np.ndarray`/`Tensor`. The universal `ndarray`/`Tensor` are builtin; a
# repo's own array ALIASES (its core.types names that also mean "an array") are the FACT that varies.
[tool.shape_contracts]
# >>> LOCAL-SLOT: shape-aliases — this repo's array-alias type names (e.g. Volume, Mask, Image, Batch)
array_aliases = []
# <<< LOCAL-SLOT: shape-aliases


# LOCAL MOD (not slotted): torch's CUDA build lives on the PyTorch index, not PyPI. Pin it there so uv
# resolves the cu130 wheel (RTX 5090) instead of the CPU build. `explicit` = only pinned packages use it.
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
